k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  namespace: backend
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/enable-access-log: 'true'
spec:
  tls:
    - hosts:
        - api.drs.scidar.org
      secretName: letsencrypt-nginx
  rules:
    - host: api.drs.scidar.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drs-api-service
                port:
                  number: 80
  ingressClassName: nginx
